--- a/style.css
+++ b/style.css
@@ -5,37 +5,12 @@
     height: auto;
     margin: 5px;
     width: 200px;
-    border: 2px solid rgb(234, 234, 233);
+    border: 2px solid rgba(234, 234, 233, 0.39);
     border-radius: 5px;
     box-sizing: border-box;
   }
-  
-  .item .item__sku {
-    display: none;
-  }
-  
-  .item .item__title {
-    display: flex;
-    align-items: center;
-    flex-grow: 1;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  .item .item__image {
-    width: 100%;
-  }
-  
-  .item .item__add {
-    background-color: rgb(5, 52, 219);
-    border: 0;
-    cursor: pointer;
-    margin: 0;
-    padding: 10px;
-    color: white;
-  }
-  
-  .cart {
+   
+  .venda {
     display: flex;
     flex-basis: 32%;
     flex-flow: column wrap;
@@ -43,12 +18,12 @@
     height: 100vh;
   }
   
-  .cart .cart__items {
+  .venda .venda__items {
     height: 500px;
     overflow-y: scroll;
   }
   
-  .empty-cart {
+  .empty-venda {
     width: 170px;
     height: 35px;
     margin: 0 auto;
